refactor schemas out of core